fix: footer logos page overflow issue

--- a/assets/css/martino.css
+++ b/assets/css/martino.css
@@ -2609,7 +2609,8 @@ body {
 
 .footer_logos-page {
   height: 256px;
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden;
   position: relative;
   padding-block: 4rem 0;
   -webkit-user-select: none;
